# AI-PPT

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/skills/content-producer/: SKILL.md
.claude/skills/content-producer/references/: intent-patterns.md
.claude/skills/docx/: SKILL.md
.claude/skills/html-design/: SKILL.md
.claude/skills/pdf/: SKILL.md
.claude/skills/pptx/: SKILL.md
.claude/skills/xlsx/: SKILL.md
src/: config.py  dependencies.py  main.py
src/api/v1/: router.py
src/core/intent/: classifier.py  conversation.py  engine.py  parameter_extractor.py
src/core/llm/: client.py
src/core/task/: decomposer.py  models.py  scheduler.py
src/engine/: __init__.py  executor.py  pipeline.py  qa.py  renderer.py
src/generators/: __init__.py  base.py  docx_generator.py  html_generator.py  pdf_generator.py  pptx_generator.py  xlsx_generator.py
src/output/: delivery.py  manager.py
src/parsers/: __init__.py  csv_parser.py  html_parser.py  json_parser.py  markdown_parser.py  office_parser.py  text_parser.py
src/skills/: __init__.py  base.py  loader.py  models.py  registry.py
src/skills/public/: __init__.py  docx_skill.py  html_design_skill.py  pdf_skill.py  pptx_skill.py  xlsx_skill.py
src/skills/user/: __init__.py
src/utils/: exceptions.py  file_utils.py  logging.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_generators.py  test_intent_engine.py  test_llm_providers.py  test_parsers.py  test_skills_registry.py
(+24 files in other folders)
