[project]
name = "ai-content-producer"
version = "0.1.0"
description = "Skill-driven intelligent content production system"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-pptx>=0.6.23",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.2",
    "reportlab>=4.1.0",
    "jinja2>=3.1.3",
    "anthropic>=0.40.0",
    "openai>=1.12.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "structlog>=24.1.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "coverage>=7.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
